welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:8: error: ')' expected but '}' found.
	}
        ^